haproxy-envoy/envoy.yml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address: { address: 0.0.0.0, port_value: 80 }
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      config:
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/" }
                                          route: { cluster: service_haproxy }
                          http_filters:
                              - name: envoy.router
    clusters:
        - name: service_haproxy
          connect_timeout: 0.25s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          hosts:
              - socket_address: { address: haproxy, port_value: 80 }
